--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="logo"
@@ -53,14 +53,14 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button type="button" class="title-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
@@ -295,7 +295,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -421,9 +421,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-studio">
           <a href="./index.html" class="logo"
@@ -488,7 +488,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-button">
