--- a/index.html
+++ b/index.html
@@ -428,12 +428,14 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-studio">
-          <a href="./index.html" class="logo"
-            >Web<span class="logo-colored-footer">Studio</span></a
-          >
+          <div class="footer-logo-text">
+            <a href="./index.html" class="footer-logo"
+              >Web<span class="logo-colored-footer">Studio</span></a
+            >
+          </div>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
@@ -493,7 +495,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-button">
