--- a/index.html
+++ b/index.html
@@ -58,6 +58,76 @@
           </svg>
         </button>
       </div>
+      <div class="mob-menu is-open">
+        <div>
+          <button type="button" class="mob-menu-btn">
+            <svg class="close-icon-menu" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-button"></use>
+            </svg>
+          </button>
+          <nav>
+            <ul class="mob-list">
+              <li class="mob-list-item">
+                <a href="./index.html" class="mob-list-link current">Studio</a>
+              </li>
+              <li class="mob-list-item">
+                <a href="" class="mob-list-link">Portfolio</a>
+              </li>
+              <li class="mob-list-item">
+                <a href="" class="mob-list-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mob-menu-contacts">
+          <address class="mob-menu-address">
+            <ul class="menu-address-list">
+              <li class="address-mob-list-item">
+                <a href="tel:+110001111111" class="address-mob-list-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="address-mob-list-item">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address-mob-list-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="menu-list-icon">
+            <li class="menu-list-item-icon">
+              <a href="" class="link-icon menu-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-list-item-icon">
+              <a href="" class="link-icon menu-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-list-item-icon">
+              <a href="" class="link-icon menu-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="menu-list-item-icon">
+              <a href="" class="link-icon menu-icon">
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
     <main>
       <section class="hero">
