--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
         <nav class="mob-menu-nav">
           <ul class="mob-list">
             <li class="mob-list-item">
-              <a href="./index.html" class="mob-list-link current nav-studio"
-                >Studio</a
-              >
+              <a href="./index.html" class="mob-list-link nav-studio">Studio</a>
             </li>
             <li class="mob-list-item">
               <a href="" class="mob-list-link">Portfolio</a>
@@ -100,28 +98,28 @@
           </address>
           <ul class="menu-list-icon">
             <li class="menu-list-item-icon">
-              <a href="" class="link-icon menu-icon">
+              <a href="" class="menu-icon">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-list-item-icon">
-              <a href="" class="link-icon menu-icon">
+              <a href="" class="menu-icon">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-list-item-icon">
-              <a href="" class="link-icon menu-icon">
+              <a href="" class="menu-icon">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="menu-list-item-icon">
-              <a href="" class="link-icon menu-icon">
+              <a href="" class="menu-icon">
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
